--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -1,5 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ripamf2991/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ripamf2991/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737607.md#1" target="_blank">状元宰相文天祥：道之所在 虽千万人吾往矣</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737607.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_1134258287-150x120.jpg" align ="left"></a>伯颜试图诱降文天祥，文天祥宁死不屈，伯颜只好将他押解到北方。途中，文天祥冒险脱逃，一路历尽艰险辗转到福州，被小皇帝宋端宗赵昰任命为右丞相。他与张世杰、陆秀夫坚持抗元， 三人被称为“宋末三杰”。1277年，文天祥在江西南部大败元军，成功收复了十四个州县，那时南宋已经降元两年了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 1:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745118.md#1" target="_blank">麦立：三冬暖</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/mily-1225-150x120.jpg" align ="left"></a> 在严冬中 出了大太阳  如同 好话一句 三冬暖......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11740590.md#1" target="_blank">1979年 孙运璿《对共匪最近各种统战活动的严正声明》</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11740590.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/SUN2-150x120.jpg" align ="left"></a>在台湾政经遭遇危机时刻，孙运璿先生带领着一群杰出的团队协助政府度过石油危机、中美断交等事件。同时也推动台湾创造为世人所称道的经济奇迹，尤其是在中共全面打击台湾的国际地位时，不卑不亢地发表对中共统战活动的严正声明，获得海内外各界的一致赞许。他因安贫乐道的生活态度及一生清廉、平实的风范，被人们尊称为“永远的行政院长”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744462.md#1" target="_blank">孩子出国留学 多早不算太早</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744462.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_89424327_Subscription_L-150x120.jpg" align ="left"></a>大学生到国外学习已变得越来越普遍，但一些父母可能希望能更早如在中学或高中期间将孩子送往国外。其利弊得失如何权衡，这需要根据个人、家庭具体情况全面考量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:01 PM			</td></tr>
@@ -26,9 +25,8 @@
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank">【医案】我性本明</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/9/2/n11493215.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1609281625492483-150x120.jpg" align ="left"></a>针灸治疗1个月后，女主管精神好很多，工作忙也不那么疲倦。但每次来诊都赶最后一班针灸，到诊时都是满脸倦容，我问女主管：“你刚下班啊？忙到那么晚！”她说她下班以后，去参加各种活动，每天把时间塞满，把精力耗光，等晚上10点回到家，累垮就睡了。冷不防，我一针见血就说：“你在逃避孤独、寂寞？你不想面对你自己！”女主管顿时傻眼！低.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 10:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank">神鸽守金库 官员杀鸽毁巢遭报应</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cad2b1ea5bfc59b6837390e9c433938-150x120.jpg" align ="left"></a>鸽子有灵吗？，有一件发生在清代甘肃布政司（藩司）的事情作了实证，万物有灵不得不信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank">天地清明引(145) 东流水－君臣生隙1</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207040111051680-150x120.jpg" align ="left"></a>金府。楚淮阳禀报：“已按老爷吩咐，放出风去，言金府高价收购药草。但是现下大疫正盛，百姓手中但有草药，皆留置自用，无人肯售。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745115.md#1" target="_blank">唐浩：香江预</a><br></h3>恶法连连无底线   邪丑癫狂舞黑剑   众业缠身妖自焚   红霾消溃故园现......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:11 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745238.md#1" target="_blank">五律：酒（二）</a><br></h3>此来亲道骨，何去带仙风。
-一醉云霄外，九升天地中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:55 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank">占星解析香港独立是反送中运动的最终结果</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840131538-150x120.jpg" align ="left"></a>从2019年6月开始爆发的香港反送中运动是今年最大的新闻，也是空前而绝后的新闻，是世界民主和人权运动史上光辉的一页。运动至今仍在继续着，很多可歌可泣的青年人的表现和大部分港人不屈不挠、和平、理性、互助且又毫不畏惧强权的精神令人赞叹不已。香港的荣光是在提醒着全世界三十年前那场惨绝人寰的大屠杀的刽子手依然是杀人者和欺骗者.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/9/11/19/n2727242.md#1" target="_blank">传奇“三元宰相”——正义敢言的商辂</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/9/11/19/n2727242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/170324021553100649-150x120.jpg" align ="left"></a>商辂，字弘载，浙江淳安人，明代著名史学家、思想家，历任英宗、代宗、宪宗三朝大臣，官至吏部尚书、文渊阁大学士。他以浙江乡试第一（解元）、礼部会试第一（会元）、殿试第一（状元）“连中三元”，不仅才学出众，更以为官清廉、刚直敢言载入《明史》，在复杂动荡的时局中，他敢于为民请命，有“三元宰相”、“一代贤相”之称。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742891.md#1" target="_blank">唐浩：末战</a><br></h3>正邪决战末戏演   香江烽火漫连天   善扬德胜败恶堕   传奇永铭凌霄巅......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742996.md#1" target="_blank">台湾古典诗：山中湖映富士山</a><br></h3> 微风淡荡趁悠闲，隐约纱笼富士山； 烟水苍茫横白鹭，金波潋滟绚斑斓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739882.md#1" target="_blank">唐浩：劝警</a><br></h3>毋为阶下奴
@@ -37,5 +35,6 @@
   参透世迷尘......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/22/n11738830.md#1" target="_blank">五律：诗（四）</a><br></h3> 明月长挥景，幽篁好抚琴。 庄生梦蝴蝶，望帝寄春心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/23/n11739866.md#1" target="_blank">唐浩：全球反共</a><br></h3>红朝败落假大空   暴恶残民亿万蒙   四海围击正气聚   百年赤祸散尘空......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:46 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/22/n11738924.md#1" target="_blank">青春期的我们需要家长的理解和关心</a><br></h3>青春期的我们，受到激素的影响，心中会有很多的想法............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ripamf2991/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/ripamf2991/djy/blob/master/gb/news2007_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ripamf2991/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_3.htm">http://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
